--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -114,6 +114,74 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-01-12">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-1-12-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="1月12日更新20.6M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-1-12-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">1月12日更新20.6M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了韩国、新加坡、美国、欧洲、香港、日本、加拿大等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                1月12日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-01-11">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-1-11-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/d407d00f6f64c9e8c53ebfcd676b4e55.webp" alt="1月11日更新21.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-1-11-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">1月11日更新21.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了日本、新加坡、韩国、欧洲、香港、加拿大、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                1月11日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-01-10">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-1-10-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="1月10日更新18.5M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-1-10-free-v2ray.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">1月10日更新18.5M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了欧洲、新加坡、韩国、日本、加拿大、香港、美国等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                1月10日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-01-09">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-1-9-clash-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="1月9日更新18.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-1-9-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">1月9日更新18.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了韩国、日本、加拿大、美国、香港、欧洲、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                1月9日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-01-08">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -208,8 +276,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-73268.htm">宠物疫苗自己打可以吗（宠物疫苗自己打可以吗现在）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物疫苗自己打可以吗，以及宠物疫苗自己打可以吗现在对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、可以自己给狗打疫苗吗2、...     </p>
+                <h4><a href="/free-nodes/2025-2-4-free-high-speed-nodes.htm">2月4日更新18.9M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、美国、香港、欧洲、日本等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -218,8 +286,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-46708.htm">动物疫病预防控制中心好不好（动物疫病防治站）</a></h4>
-                <p>摘要：       今天给各位分享动物疫病预防控制中心好不好的知识，其中也会对动物疫病防治站进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、动物疫病预防控制中.</p>
+                <h4><a href="/news/article-61887.htm">vue项目中数据更新页面不刷新问题</a></h4>
+                <p>这种情况可以分为很多种.但是究其原因就是vue3.0以下版本无法监听对象（包括数组以及对象）的变化，当数据发生变化的时候vue的刷新机制是监听不到数据变化的，所以需要我们在实际应用过程中通过各种处理来</p>
             </div>
         </div>
     </div>
@@ -228,38 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-8-node-share.htm">3月8日更新20M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、美国、新加坡、韩国、日本、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-15-free-high-speed-nodes.htm">1月15日更新18.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、香港、加拿大、新加坡、欧洲、日本、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-71945.htm">宠物粮厂家招聘最新信息（宠物粮基地）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮厂家招聘最新信息，以及宠物粮基地对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、浙江宠物干粮生产厂家哪家好...        本篇</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-60117.htm">不能养的猫品种（不能养的猫品种有哪些）</a></h4>
-                <p>摘要：       今天给各位分享不能养的猫品种的知识，其中也会对不能养的猫品种有哪些进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、世界十大禁养名猫是什么?.</p>
+                <h4><a href="/news/article-54467.htm">动物疫苗工艺有哪些种类（动物疫苗工艺流程）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗工艺有哪些种类的知识，其中也会对动物疫苗工艺流程进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、所有疫苗的种类的区别.</p>
             </div>
         </div>
     </div>
@@ -278,8 +316,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-48678.htm">我想开宠物店（我想开宠物店怎么申请）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈我想开宠物店，以及我想开宠物店怎么申请对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、开一个宠物店大概需要多少投资?...        </p>
+                <h4><a href="/news/article-42246.htm">Win10 的 WPF 程序的 wisptis 服务是附加到进程的窗口</a></h4>
+                <p>在 Win10 下，没有 WISPTIS 服务进程，和 win7 不相同。但是 WPF 依然通过 PENIMC 从 COM 获取实时触摸消息，那么 WPF 是从哪里获取 通过 WindowDebugg</p>
             </div>
         </div>
     </div>
@@ -288,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-75286.htm">宠物鲜粮市场规模分析报告（宠物粮食市场）</a></h4>
-                <p>摘要：       今天给各位分享宠物鲜粮市场规模分析报告的知识，其中也会对宠物粮食市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物的用品市场分析?..</p>
+                <h4><a href="/news/article-75965.htm">宠物猫打疫苗多少钱一针_养猫注意事项（给宠物猫打疫苗需要多少钱）</a></h4>
+                <p>摘要：       今天给各位分享宠物猫打疫苗多少钱一针_养猫注意事项的知识，其中也会对给宠物猫打疫苗需要多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1.</p>
             </div>
         </div>
     </div>
@@ -298,8 +336,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
+                <h4><a href="/news/article-69977.htm">动物疫苗的保管与使用 动物疫苗的保管与使用实验报告</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的保管与使用的问题，于是小编就整理了4个相关介绍动物疫苗的保管与使用的解答，让我们一起看看吧。宠物疫苗如何保存与运输？宠</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-50730.htm">被猫抓了一下红色划痕鼓起来了要打疫苗吗（被猫抓了红色划痕凸起的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈被猫抓了一下红色划痕鼓起来了要打疫苗吗，以及被猫抓了红色划痕凸起的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、被猫用爪子抓破了要去..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-69328.htm">Java 18为什么要指定UTF-8为默认字符集_在线工具</a></h4>
+                <p>在Java 18中，将UTF-8指定为标准Java API的默认字符集。有了这一更改，依赖于默认字符集的API将在所有实现、操作系统、区域设置和配置中保持一致。 做这一更改的主要目标：  当Java程</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-36820.htm">动物医院实践心得体会怎么写范文四年级（动物医院实践个人总结）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院实践心得体会怎么写范文四年级，以及动物医院实践个人总结对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、医院志愿服务心得体会... </p>
             </div>
         </div>
     </div>
@@ -310,7 +378,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">67</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                                <h4><span class="badge" style="float: right;">77</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                                 <h4><span class="badge" style="float: right;">80</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
                                 <h4><span class="badge" style="float: right;">83</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                             </div>
